kubernetes/app(redis)/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # redirect
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - yg.woongjin.com
    secretName: ingress-tls-secret
  rules:
  - host: yg.woongjin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
